--- a/css/layout.css
+++ b/css/layout.css
@@ -434,7 +434,7 @@ nav ul li.active ul{visibility: visible; opacity: .9;}
 	background: url(../images/landing-img.jpg) 0 0 repeat fixed;	
 	margin: 0 auto;
 	padding: 0;
-	position: absolute; top:0px; left:0px; width:200px; height:25px
+	position: auto;
 	z-index: 100;
 	width: 100%;
 	height: 600px;
