--- a/css/layout.css
+++ b/css/layout.css
@@ -296,8 +296,8 @@ p.separator {
 ================================================== */
 
 nav {
-	background: #4c4c4c;
-	visibility: visible; 
+	background: #131817;
+	visibility: transparent; 
 	opacity: .5;
 	width: 100%;
 	position: relative;
