--- a/css/layout.css
+++ b/css/layout.css
@@ -297,7 +297,6 @@ p.separator {
 
 nav {
 	background: #131817;
-	opacity: 0.1;
 	width: 100%;
 	position: relative;
 	z-index: 1000;
@@ -338,13 +337,13 @@ nav ul li {
 nav a {
 	font-family: 'novel', sans-serif;
 	font-size: 16px;
-	color: #fff;
+	color: transparent;
 	font-weight: normal;
 	text-decoration: none;
 }
 
 nav a:visited {
-	color: #fff;
+	color: transparent;
 }
 
 nav a:hover {
