--- a/css/layout.css
+++ b/css/layout.css
@@ -296,7 +296,7 @@ p.separator {
 ================================================== */
 
 nav {
-	background: transparent;
+	background: #131817;
 	width: 100%;
 	position: relative;
 	z-index: 1000;
