--- a/css/layout.css
+++ b/css/layout.css
@@ -431,13 +431,15 @@ nav ul li.active ul{visibility: visible; opacity: .9;}
 }
 
 #intro .bg1 {
-	background: url(../images/landing-img-7.jpg) 0 0 repeat fixed;
-	margin: 0 auto;
-	padding: 0;
-	position: absolute;
-	z-index: 100;
-	width: 100%;
-	height: 600px;
+background: url(../images/landing-img-7.jpg) 0 0 repeat fixed;
+background-size: 100% 1075px;
+background-repeat: no-repeat;
+margin: 0 auto;
+padding: 0;
+position: auto;
+z-index: 100;
+width: 100%;
+height: 600px;
 }
 
 .title {
